--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ body{
     display: block;
     height: 460px;
     width: 460px;
-    background-image: url(/IMG-20190715-WA0009.png);
+    background-image: url(/images/IMG-20190715-WA0009.png);
     background-size: cover;
     background-position: center;
     border-radius: 50%;
@@ -92,45 +92,56 @@ body{
     line-height: 1.6em;
 }
 .Gridcontainer {
-    background: rgba(255, 255, 254, 0.999);
+    content: '';
+    background: url(/images/1.png) no-repeat center
+    center/cover ;
     display: grid;
     color:  rgba(255, 255, 254, 0.999);
     grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr 3fr 1fr;
+    grid-template-rows: 1fr 8fr 1fr;
     grid-gap: 3px;
-    margin-left: 15%;
-    margin-right: 5%;
+    margin-left: 7%;
+    margin-right: 7%;
     border-radius: 10%;
     text-align: center;
     line-height: 1.8em;
+    z-index: -1;
+    border-radius: 0.5em;
+     
+    
 }
 
 .Gridcontainer .item1{
-    background-color:  rgba(10, 28, 95, 0.897);;
+    background-color:  rgba(10, 28, 95, 0.6);;
+
     grid-column:1/4;
     border-radius: 0.5em;
+  
+    
+
     
 }
 
 .Gridcontainer .item2{
-    background-color:  rgba(10, 28, 95, 0.897);
+    background-color:  rgba(10, 28, 95, 0.6);
     border-radius: 0.5em;
+  
 }
 
 .Gridcontainer .item3{
-    background-color:  rgba(10, 28, 95, 0.897);
+    background-color:  rgba(10, 28, 95, 0.6);
     border-radius: 0.5em;
 }
 
 
 .Gridcontainer .item4{
-    background-color:  rgba(10, 28, 95, 0.897);
+    background-color:  rgba(10, 28, 95, 0.6);
     border-radius: 0.5em;
 
 
 }
 .Gridcontainer .item5{
-    background-color:  rgba(10, 28, 95, 0.897);
+    background-color:  rgba(10, 28, 95, 0.6);
     border-radius: 0.5em;
     grid-column:1/4
 
