--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@ body{
     min-height: 100vh;
     background-position: center;
     background-size: cover;
+   
+
 }
 
 .home .home-content{
@@ -98,7 +100,7 @@ body{
     display: grid;
     color:  rgba(255, 255, 254, 0.999);
     grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr 8fr 1fr;
+    grid-template-rows: 1fr 3fr ;
     grid-gap: 3px;
     margin-left: 7%;
     margin-right: 7%;
