--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body{
     flex-wrap: wrap;
 }
 
-.home{
+.welcome-section{
     background-color: rgba(255, 255, 254, 0.999);
     min-height: 100vh;
     background-position: center;
@@ -22,7 +22,7 @@ body{
 
 }
 
-.home .home-content{
+.welcome-section .welcome-section-content{
    
     flex-basis: 100%;
     max-width: 100%;
@@ -33,7 +33,7 @@ body{
     margin-bottom: 15em;
    
 }
-.home .home-content .pic-box{
+.welcome-section .welcome-section-content .pic-box{
    
     flex-basis: 50%;
     max-width: 50%;
@@ -41,7 +41,7 @@ body{
     display: flex;
     justify-content: flex-end;
 }
-.home .home-content .pic-box .pic{
+.welcome-section .welcome-section-content .pic-box .pic{
     
     max-width: 100%;
     display: block;
@@ -52,13 +52,13 @@ body{
     background-position: center;
     border-radius: 50%;
 }
-.home .home-content .text{
+.welcome-section .welcome-section-content .text{
    
     flex-basis: 50%;
     max-width: 50%;
     padding: 60px 15px;
 }
-.home .home-content .text h1{
+.welcome-section .welcome-section-content .text h1{
     color: rgba(10, 28, 95, 0.897);
     font-size: xx-large;
     font-weight: 800;
@@ -66,7 +66,7 @@ body{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 
-.home .home-content .text h3{
+.welcome-section .welcome-section-content .text h3{
     color: rgba(223, 149, 37, 0.87);
     font-size: x-large;
     font-weight: 600;
@@ -94,6 +94,7 @@ body{
     line-height: 1.6em;
 }
 .Gridcontainer {
+    min-height: 80vh;
     content: '';
     background: url(/images/1.png) no-repeat center
     center/cover ;
@@ -160,4 +161,44 @@ body{
     margin-right: 10px;
     
   }
+  .projects{
+    margin-left: 7%;
+    margin-right: 7%;
+    color: black ;
+     
+  }
+
+
+.projects .Projectsgrid{
+    display: grid ; 
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;  
+    min-height: 100vh;    
+    grid-gap: 25px;
+    margin-top: 10%;
+   
+  }
   
+  .projects  .Projectsgrid .item1{
+      background-color: rgb(234, 240, 240);
+ 
+   
+
+  }
+    
+  .projects  .Projectsgrid .item2{
+    background-color: rgb(234, 240, 240);
+   
+}
+  
+.projects  .Projectsgrid .item3{
+    background-color:  rgb(234, 240, 240);
+    
+}
+.projects  .Projectsgrid .item4{
+    background-color:  rgb(234, 240, 240);
+    
+}
+  
+
+
