--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body{
    
     flex-basis: 100%;
     max-width: 100%;
-    height: 90%;
+    max-height: 80%;
     display: flex;
     flex-wrap: wrap;
     margin-top: 11.8rem;
@@ -695,4 +695,8 @@ ul.actions {
                     left: 20px;
                     color: hsla(0, 0%, 0%, .6);
                     font-size: 16px;
+                  }
+
+                  html {
+                    scroll-behavior: smooth;
                   }
