--- a/css/style.css
+++ b/css/style.css
@@ -164,7 +164,7 @@ body{
 
 .Gridcontainer .item4{
     grid-area: item4;
-    background-color: var(--sec);
+    background: linear-gradient(to bottom, var(--sec) 0% , var(--base) 100%);
     color: var(--base);
     padding: 40px;
     box-shadow: 0 4px 8px 0 rgba(44, 22, 95, 0.2), 0 6px 20px 0 rgba(199, 185, 233, 0.19);
